--- a/config/routes/framework.yaml
+++ b/config/routes/framework.yaml
@@ -1,4 +1,20 @@
+controllers_back:
+    resource: ../../src/Controller/Back
+    type: annotation
+    prefix: admin
+    name_prefix: back_
+
+controllers_front:
+    resource: ../../src/Controller/Front
+    type: annotation
+    name_prefix: front_
+
+kernel:
+    resource: ../../src/Kernel.php
+    type: annotation
+
 when@dev:
     _errors:
         resource: '@FrameworkBundle/Resources/config/routing/errors.xml'
         prefix: /_error
+
