--- a/config/routes/framework.yaml
+++ b/config/routes/framework.yaml
@@ -9,6 +9,10 @@ controllers_front:
     type: annotation
     name_prefix: front_
 
+controllers:
+    resource: ../../src/Controller/
+    type: annotation
+
 kernel:
     resource: ../../src/Kernel.php
     type: annotation
