<docker-compose.yml> : Add {maildev} service.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -54,7 +54,13 @@ services:
     ports:
       - "80:80"
       - "443:443"
-
+  maildev:
+    image: maildev/maildev
+    container_name: maildev_docker_symfony
+    command: bin/maildev --web 80 --smtp 25 --hide-extensions STARTTLS
+    ports:
+      - "8081:80"
+    restart: always
 
 volumes:
   db-data: {}
