<.env> : Add {MAILER_DSN}.

--- a/.env
+++ b/.env
@@ -20,6 +20,7 @@ APP_SECRET=c8731d00d95a487e7f60cd18dee02716
 
 ###> symfony/mailer ###
 # MAILER_DSN=smtp://localhost
+MAILER_DSN=smtp://localhost:25
 ###< symfony/mailer ###
 
 ###> doctrine/doctrine-bundle ###
