--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -39,7 +39,7 @@ security:
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
-        # - { path: ^/admin, roles: ROLE_ADMIN }
+        - { path: ^/admin, roles: ROLE_ADMIN }
         - { path: ^/mon-compte, roles: ROLE_USER }
         - { path: ^/connexion, roles: PUBLIC_ACCESS}
         - { path: ^/inscription, roles: PUBLIC_ACCESS}
