--- a/.env
+++ b/.env
@@ -28,7 +28,7 @@ MAILER_DSN=smtp://localhost:25
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
-# DATABASE_URL="mysql://db_user:db_password@127.0.0.1:3306/db_name?serverVersion=5.7"
+ # DATABASE_URL="mysql://postgres:password@db:5432/db?serverVersion=13&charset=utf8"
 DATABASE_URL="postgresql://postgres:password@db:5432/db?serverVersion=13&charset=utf8"
 ###< doctrine/doctrine-bundle ###
 
