--- a/composer.json
+++ b/composer.json
@@ -48,6 +48,7 @@
         "symfony/webapp-meta": "^1.0",
         "symfony/webpack-encore-bundle": "^1.14",
         "symfony/yaml": "6.0.*",
+        "symfonycasts/reset-password-bundle": "^1.14",
         "symfonycasts/verify-email-bundle": "^1.10",
         "twig/extra-bundle": "^3.4",
         "twig/intl-extra": "^3.4",
