--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -29,6 +29,7 @@ security:
                 path: app_logout
                 # where to redirect after logout
                 target: /connexion
+            user_checker: App\Security\UserChecker
 
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#the-firewall
