--- a/.env
+++ b/.env
@@ -29,7 +29,7 @@ MAILER_DSN=smtp://localhost:25
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 # DATABASE_URL="mysql://db_user:db_password@127.0.0.1:3306/db_name?serverVersion=5.7"
-# DATABASE_URL="postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=13"
+DATABASE_URL="postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=11"
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/webapp-meta ###
